resources/dsaas/dsaas-production/fabric8-online-docs-app.route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    openshift.io/host.generated: "true"
  labels:
    app: fabric8-online-docs-app
    group: io.fabric8.apps
    provider: fabric8
    version: 1.0.7
  name: fabric8-online-docs-app
spec:
  host: fabric8-online-docs-app-dsaas-production.09b5.dsaas.openshiftapps.com
  to:
    kind: Service
    name: fabric8-online-docs-app
    weight: 100
  wildcardPolicy: None
